<resources>
    <string name="app_name">버싱</string>

    <!-- common -->
    <string name="delete_all">All</string>
    <string name="timeout">요청 시간이 초과되었습니다.</string>
    <string name="service_error">데이터 요청에 실패하였습니다.</string>

    <!-- Search -->
    <string name="route_no_result">검색 결과가 없습니다.</string>

    <!-- Route -->
    <string name="tab_name_route">버스</string>
    <string name="hint_search_route">버스 번호 검색</string>
    <string name="night_route">심야</string>
    <string name="route_no_recent_search">최근 조회한 노선이 없습니다.</string>

    <!-- Detail -->
    <string name="no_via_stations">경유 정류장이 존재하지 않습니다.</string>
    <string name="btn_info">정보</string>
    <string name="start_tag_route_bus_count">현재</string>
    <string name="end_tag_route_bus_count">운행중</string>
    <string name="hint_search_via_station">정류장 이름 검색</string>

    <!-- Info -->
    <string name="route_info_content_title_1">운행 구간</string>
    <string name="route_info_content_title_2">운행 시간 (평일 기준)</string>
    <string name="route_info_content_title_3">배차 간격 (평일 기준)</string>
    <string name="start_station">기점</string>
    <string name="turnaround_station">회차지</string>


    <!-- Station -->
    <string name="tab_name_station">정류장</string>
    <string name="hint_search_station">정류장 이름, 번호 검색</string>
    <string name="station_no_recent_search">최근 조회한 정류장이 없습니다.</string>

    <!-- Detail -->
    <string name="no_via_routes">경유 노선이 존재하지 않습니다.</string>
    <string name="next_station_tag">Next</string>
    <string name="no_arrival">도착 정보 없음</string>

    <!-- Setting -->
    <string name="tab_name_setting">설정</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>