<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.screen.route.SearchRouteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingHorizontal="@dimen/margin_padding_default"
        android:paddingVertical="@dimen/margin_padding_small"
        android:background="@color/semi_light_grey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_default"
            android:orientation="horizontal"
            android:gravity="start|center_vertical"
            android:background="@drawable/bg_rectangle_white_rounded">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_padding_default"
                android:src="@drawable/ic_search"/>

            <EditText
                android:id="@+id/edRoute"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/margin_padding_default"
                android:hint="@string/route_input_hint"
                android:textSize="@dimen/text_default"
                android:textColorHint="@color/grey"
                android:background="@drawable/bg_rectangle_white_rounded"
                android:inputType="text" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkKeywordNightRoute"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minHeight="0dp"
                android:text="@string/night_route"
                android:textColor="@drawable/selector_night_route"
                android:textSize="@dimen/text_extremely_small"
                app:buttonTint="@drawable/selector_night_route"
                android:background="@null" />

            <ImageButton
                android:id="@+id/btnDeleteSearchKeyword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/margin_padding_default"
                android:src="@drawable/ic_delete_rounded"
                android:background="@null"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:weightSum="1"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_padding_default"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible"
                    android:paddingVertical="@dimen/margin_padding_small"
                    android:gravity="center"
                    android:text="@string/route_no_recent_search"
                    android:textSize="@dimen/text_small"
                    android:textColor="@color/grey"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvRecentSearch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/semi_light_grey"
                    android:visibility="gone"/>

            </FrameLayout>

            <ImageButton
                android:id="@+id/btnDeleteAllRecentSearch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/margin_padding_default"
                android:src="@drawable/ic_delete_rounded"
                android:background="@null"/>

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/divider"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearchResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:visibility="gone"/>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/pgbSearchRoute"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:indicatorColor="@color/grey"
            app:trackColor="@color/light_grey"
            app:trackThickness="@dimen/thickness_loading_indicator"
            android:indeterminate="true"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txtNoResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/route_no_result"
            android:textColor="@color/grey"/>

        <LinearLayout
            android:id="@+id/llTimeout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeout"
                android:textColor="@color/grey"/>

            <ImageButton
                android:id="@+id/btnTimeoutRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_default"
                android:src="@drawable/ic_request"
                android:background="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llServiceError"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_error"
                android:textColor="@color/grey" />

            <ImageButton
                android:id="@+id/btnServiceErrorRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_default"
                android:src="@drawable/ic_request"
                android:background="@color/white"/>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>